Correction Chemin Script + Ajout block

--- a/mockUp/src/jade/contact.jade
+++ b/mockUp/src/jade/contact.jade
@@ -2,9 +2,6 @@ extends layout
 
 block title
     title Resto Rallye - Contact
-    
-block stylesheet
-    link(rel="stylesheet" href="../css/screen.css")
 
 block header
     header
@@ -71,5 +68,4 @@ block footer
                 a(href="http://portfolio.simon-leyder.be/") Simon Leyder
                 |  &nbsp;@ 2014
 
-    script window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
-    script(src="js/script.min.js")
+block script
