--- a/mockUp/src/sass/screen.sass
+++ b/mockUp/src/sass/screen.sass
@@ -119,15 +119,16 @@ nav
     transform-style: inherit
     background: $slideText
 //Images Parallax accueil
+//Accueil
 #slide1
-    background-image: url("images/backgroundImage.jpg")
-    background-attachment: fixed
+    background: url("images/backgroundImage.jpg") center fixed
 #slide2
-    background-image: url("images/backgroundImage1.jpg")
-    background-attachment: fixed
+    background: url("images/backgroundImage1.jpg") center fixed
 #slide3
-    background-image: url("images/backgroundImage2.jpg")
-    background-attachment: fixed
+    background: url("images/backgroundImage2.jpg") center fixed
+//Rallye
+#slide4
+    background: url("images/backgroundImage3.jpg") center fixed
 
 //Style content
 blockquote
