--- a/mockUp/src/jade/restaurant.jade
+++ b/mockUp/src/jade/restaurant.jade
@@ -71,5 +71,4 @@ block footer
                 a(href="http://portfolio.simon-leyder.be/") Simon Leyder
                 |  &nbsp;@ 2014
 
-    script window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
-    script(src="js/script.min.js")
+block script
