--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -100,5 +100,5 @@ block footer
 
 block script
     script(src="js/vendor/modernizr-2.6.2.min.js")
-    script window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
+    script(src="js/vendor/jquery.js")
     script(src="js/script.min.js")
