--- a/mockUp/src/jade/layout.jade
+++ b/mockUp/src/jade/layout.jade
@@ -22,5 +22,5 @@ body
     block footer
     block script
         script(src="../js/vendor/modernizr-2.6.2.min.js")
-        script window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
+        script(src="../js/vendor/jquery.js")
         script(src="../js/script.min.js")
