--- a/mockUp/src/jade/rallye.jade
+++ b/mockUp/src/jade/rallye.jade
@@ -71,3 +71,9 @@ block footer
                 | &nbsp;and&nbsp;
                 a(href="http://portfolio.simon-leyder.be/") Simon Leyder
                 |  &nbsp;@ 2014
+
+block script
+    script(src="../js/vendor/modernizr-2.6.2.min.js")
+    script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
+    script(src="../js/vendor/jquery.js")
+    script(src="../js/script.min.js")
