Correction minim CSS

--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -11,7 +11,7 @@ block header
         nav
             ul
                 li
-                    a(href="html/restaurant.html") Restaurant
+                    a(href="html/restaurant.html") Restaurants
                 li
                     a(href="html/rallye.html") Rallye
                 li.banners
@@ -72,7 +72,7 @@ block footer
                 h4 Notre adresse
                 p
                     span Mail&nbsp;: 
-                    | adress@gmail.com
+                    a(href="mailto adress@gmail.com") adress@gmail.com
                 p
                     span Téléphone&nbsp;: 
                     | 0476 34 21 67
