--- a/mockUp/src/jade/restaurant.jade
+++ b/mockUp/src/jade/restaurant.jade
@@ -12,7 +12,7 @@ block header
         nav
             ul
                 li.focus
-                    a(href="restaurant.html") Restaurant
+                    a(href="restaurant.html") Restaurants
                 li
                     a(href="rallye.html") Rallye
                 li.banners
