--- a/mockUp/src/jade/rallye.jade
+++ b/mockUp/src/jade/rallye.jade
@@ -9,7 +9,7 @@ block header
         nav
             ul
                 li
-                    a(href="restaurant.html") Restaurant
+                    a(href="restaurant.html") Restaurants
                 li
                     a(href="rallye.html") Rallye
                 li.banners
