Ajout de l'ancre à la newsletter

--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -86,7 +86,7 @@ block footer
                         a(href="#") RSS
             section.newsletter
                 h4 NewsLetter
-                form
+                form#ancreError
                     input(type="text" placeholder="votre@mail.com")
                     input(type="submit" value="S'inscrire")
                     span.error Il y a une faute de frappe bitchies
