--- a/mockUp/src/jade/rallye.jade
+++ b/mockUp/src/jade/rallye.jade
@@ -76,4 +76,7 @@ block script
     script(src="../js/vendor/modernizr-2.6.2.min.js")
     script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
     script(src="../js/vendor/jquery.js")
+    script.
+        var long = 50.6412
+        var lat = 5.5718
     script(src="../js/script.min.js")
