--- a/mockUp/src/jade/rallye.jade
+++ b/mockUp/src/jade/rallye.jade
@@ -77,6 +77,5 @@ block script
     script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
     script(src="../js/vendor/jquery.js")
     script.
-        var long = 50.6412
-        var lat = 5.5718
+        var myAddress = "Chaussée Romaine 40, 4252 Omal, Belgique"
     script(src="../js/script.min.js")
