fix marker problem

--- a/mockUp/src/jade/rallye.jade
+++ b/mockUp/src/jade/rallye.jade
@@ -77,5 +77,5 @@ block script
     script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
     script(src="../js/vendor/jquery.js")
     script.
-        var myAddress = "Chaussée Romaine 40, 4252 Omal, Belgique"
+        var myAddress = "Rue Peetermans 80, 4100 Seraing, Belgique"
     script(src="../js/script.min.js")
