Change title of nav + fix shadow link of quote

--- a/mockUp/src/jade/contact.jade
+++ b/mockUp/src/jade/contact.jade
@@ -9,17 +9,17 @@ block header
         nav
             ul
                 li
-                    a(href="restaurant.html") Restaurants
+                    a(href="evenements.html") Événements
                 li
-                    a(href="rallye.html") Rallye
+                    a(href="blog.html") Actualités
                 li.banners
                     a(href="../index.html")
                         img(src="../css/images/Ecusson.png", alt="Banners Resto Rallye")
                 li
-                    a(href="blog.html") Blog
-                li.focus
+                    a(href="restaurants.html") Restaurants
+                li
                     a(href="contact.html") Contact
-                
+
 
 block content
     p Page Contact
@@ -31,11 +31,11 @@ block footer
                 h4 Navigation
                 ul
                     li
-                        a(href="restaurant.html") Restaurant
+                        a(href="evenements.html") Événements
                     li
-                        a(href="rallye.html") Rallye
+                        a(href="blog.html") Actualités
                     li
-                        a(href="blog.html") Blog
+                        a(href="restaurants.html") Restaurants
                     li
                         a(href="contact.html") Contact
             section.looking
