--- a/mockUp/src/sass/screen.sass
+++ b/mockUp/src/sass/screen.sass
@@ -147,6 +147,11 @@ blockquote
     -moz-text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6)
     -o-text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6)
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6)
+    a
+        -webkit-text-shadow: 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.6)
+        -moz-text-shadow: 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.6)
+        -o-text-shadow: 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.6)
+        text-shadow: 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.6)
 .explain
     p
         margin-left: 0.85em
