--- a/mockUp/src/jade/blog.jade
+++ b/mockUp/src/jade/blog.jade
@@ -9,17 +9,16 @@ block header
         nav
             ul
                 li
-                    a(href="restaurant.html") Restaurants
+                    a(href="evenements.html") Événements
                 li
-                    a(href="rallye.html") Rallye
+                    a(href="blog.html") Actualités
                 li.banners
                     a(href="../index.html")
                         img(src="../css/images/Ecusson.png", alt="Banners Resto Rallye")
-                li.focus
-                    a(href="blog.html") Blog
+                li
+                    a(href="restaurants.html") Restaurants
                 li
                     a(href="contact.html") Contact
-                
 
 block content
     p Page Blog
@@ -31,11 +30,11 @@ block footer
                 h4 Navigation
                 ul
                     li
-                        a(href="restaurant.html") Restaurant
+                        a(href="evenements.html") Événements
                     li
-                        a(href="rallye.html") Rallye
+                        a(href="blog.html") Actualités
                     li
-                        a(href="blog.html") Blog
+                        a(href="restaurants.html") Restaurants
                     li
                         a(href="contact.html") Contact
             section.looking
