--- a/mockUp/src/jade/evenements.jade
+++ b/mockUp/src/jade/evenements.jade
@@ -1,31 +1,32 @@
 extends layout
 
 block title
-    title Resto Rallye - Restaurant partenaire
-    
-block stylesheet
-    link(rel="stylesheet" href="../css/screen.css")
+    title Resto Rallye - Rallye
 
 block header
     header
         h2 Menu de navigation du site Resto Rallye
         nav
             ul
-                li.focus
-                    a(href="restaurant.html") Restaurants
                 li
-                    a(href="rallye.html") Rallye
+                    a(href="evenements.html") Événements
+                li
+                    a(href="blog.html") Actualités
                 li.banners
                     a(href="../index.html")
                         img(src="../css/images/Ecusson.png", alt="Banners Resto Rallye")
                 li
-                    a(href="blog.html") Blog
+                    a(href="restaurants.html") Restaurants
                 li
                     a(href="contact.html") Contact
-                
+    
 
 block content
-    p Page Restaurant
+    div#slideMap.slideImage
+    div.slideText
+        h3 Bienvenue au Resto-Rally
+        p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, quos reiciendis numquam accusamus qui aut autem eaque maxime voluptate tempore incidunt enim, placeat sunt ipsum minus, officiis culpa molestiae architecto.
+    div#slide4.slideImage
 
 block footer
     div.slideText.myFooter
@@ -34,11 +35,11 @@ block footer
                 h4 Navigation
                 ul
                     li
-                        a(href="restaurant.html") Restaurant
+                        a(href="evenements.html") Événements
                     li
-                        a(href="rallye.html") Rallye
+                        a(href="blog.html") Actualités
                     li
-                        a(href="blog.html") Blog
+                        a(href="restaurants.html") Restaurants
                     li
                         a(href="contact.html") Contact
             section.looking
@@ -75,4 +76,6 @@ block script
     script(src="../js/vendor/modernizr-2.6.2.min.js")
     script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
     script(src="../js/vendor/jquery.js")
+    script.
+        var myAddress = "Rue Peetermans 80, 4100 Seraing, Belgique"
     script(src="../js/script.min.js")
