--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -11,14 +11,14 @@ block header
         nav
             ul
                 li
-                    a(href="html/restaurant.html") Restaurants
+                    a(href="html/evenements.html") Événements
                 li
-                    a(href="html/rallye.html") Rallye
+                    a(href="html/blog.html") Actualités
                 li.banners
                     a(href="index.html")
                         img(src="css/images/Ecusson.png", alt="Banners Resto Rallye")
                 li
-                    a(href="html/blog.html") Blog
+                    a(href="html/restaurants.html") Restaurants
                 li
                     a(href="html/contact.html") Contact
                   
@@ -62,11 +62,11 @@ block footer
                 h4 Navigation
                 ul
                     li
-                        a(href="html/restaurant.html") Restaurant
+                        a(href="html/evenements.html") Événements
                     li
-                        a(href="html/rallye.html") Rallye
+                        a(href="html/blog.html") Actualités
                     li
-                        a(href="html/blog.html") Blog
+                        a(href="html/restaurants.html") Restaurants
                     li
                         a(href="html/contact.html") Contact
             section.looking
