--- a/mockUp/src/jade/evenements.jade
+++ b/mockUp/src/jade/evenements.jade
@@ -23,7 +23,7 @@ block header
 
 block content
     div#slideMap.slideImage
-    div.slideText
+    div.slideText.addText
         h3 Bienvenue au Resto-Rally
         p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, quos reiciendis numquam accusamus qui aut autem eaque maxime voluptate tempore incidunt enim, placeat sunt ipsum minus, officiis culpa molestiae architecto.
     div#slide4.slideImage
