--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -28,10 +28,11 @@ block content
             | Ne manquez pas notre prochain 
             a(href="#") Rendez-vous 
             | dans la région de Namur
-    div.slideText.explain
+    div.slideText.addText
         h3 Bienvenue au Resto-Rally
         p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, quos reiciendis numquam accusamus qui aut autem eaque maxime voluptate tempore incidunt enim, placeat sunt ipsum minus, officiis culpa molestiae architecto.
         p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. A libero quasi laudantium delectus impedit nesciunt tenetur doloribus numquam nemo commodi veritatis recusandae rerum ea illum quae, nihil cupiditate culpa alias!
+        
     div#slide2.slideImage
     div.slideText.slideRestaurant
         h3 Nous vous conseillons ces adresses
