--- a/mockUp/src/sass/_mixins.sass
+++ b/mockUp/src/sass/_mixins.sass
@@ -18,19 +18,17 @@
 	-ms-filter: 	grayscale( $level )
 	-o-filter: 		grayscale( $level )
 =menuFontStyle( $size )
-	font-family: $headingFont
+	font-family: $NavFont
 	font-size: $size
 	text-transform: uppercase
 =headingStyle( $size )
 	font-family: $headingFont
 	font-size: $size
-	font-weight: 100
 	color: $headingColor
 =quoteStyle( $size )
 	font-family: $quoteFont
 	font-size: $size
 	font-style: italic
-	font-weight: 400
 	color: $quoteColor
 =clearFloat()
 	display: block
