--- a/mockUp/src/sass/_rules.sass
+++ b/mockUp/src/sass/_rules.sass
@@ -2,6 +2,7 @@
 
 
 //My font
-$regularFont: 16px/1.5 "Helvetica Neue", "Helvetica", "Arial", sans-serif
-$headingFont: "Roboto", sans-serif
-$quoteFont: "Dancing Script", cursive
+$regularFont: 16px/1.5 "MyRobotoLabeur", sans-serif
+$NavFont: "MyRobotoNav", sans-serif
+$headingFont: "MyRobotoHeading", sans-serif
+$quoteFont: "MyDancingScript", cursive
