--- a/mockUp/src/sass/screen.sass
+++ b/mockUp/src/sass/screen.sass
@@ -1,5 +1,6 @@
 @import 'resetMeyer'
 
+@import 'fontFace'
 @import 'rules'
 @import 'colors'
 @import 'mixins'
@@ -138,9 +139,9 @@ blockquote
     bottom: 0
     left: 0
     margin: auto
-    width: 20em
+    width: 16.5em
     height: 2.5em
-    +quoteStyle( 2.5em )
+    +quoteStyle( 2.75em )
     line-height: 1.25
     text-align: center
     -webkit-text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6)
@@ -152,9 +153,8 @@ blockquote
         -moz-text-shadow: 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.6)
         -o-text-shadow: 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.6)
         text-shadow: 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.6)
-.explain
+.addText
     p
-        margin-left: 0.85em
         padding: 0.5em 0
         &firsr-child
             padding: 0
