Texte à mettre en forme
À faire

--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -30,8 +30,29 @@ block content
             | dans la région de Namur
     div.slideText.addText
         h3 Bienvenue au Resto-Rally
-        p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, quos reiciendis numquam accusamus qui aut autem eaque maxime voluptate tempore incidunt enim, placeat sunt ipsum minus, officiis culpa molestiae architecto.
-        p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. A libero quasi laudantium delectus impedit nesciunt tenetur doloribus numquam nemo commodi veritatis recusandae rerum ea illum quae, nihil cupiditate culpa alias!
+        p Le Resto Rallye, un itinéraire gourmand en trois restaurants
+        p Pourquoi toujours se limiter à un seul restaurant pour déguster l’entièreté d’un menu ?
+        p Le Resto Rallye offre la possibilité à ses « gastronomades » de faire connaissance, en une seule soirée, de plusieurs établissements d’une ville ainsi que de découvrir une nouvelle région de façon originale et ludique.
+        p A l’instar d’un rallye automobile, les convives se réunissent dans un espace commun afin d’y déguster l’apéro et les mises en bouche. Chacun y reçoit le roadbook ; on trouve dans celui-ci un plan de la ville avec l’emplacement des restaurants, les bons donnant droit aux mets ainsi que l’itinéraire des restaurants proposés.
+        p Ensuite, départ vers l’inconnu… Il faut expérimenter les papilles ! C’est la seule constante des étapes… La première halte est consacrée à la dégustation de l‘entrée froide, la deuxième à l’entrée chaude et la dernière au plat principal. Tous les Resto Rallyens se retrouvent ensuite pour savourer le dessert et le café dans le même endroit où ils ont pris l‘apéro et dans lequel ils peuvent échanger leurs avis sur leurs parcours respectifs.
+        h3 Programme type de la soirée
+        p 18.30- 19.30 réception des Resto Rallyens au lieu d’accueil
+        p 19.30-19.45 déplacement des Resto Rallyens vers les différents restaurants
+        p 19.45-20.30 entrée froide
+        p 20.30-20.45 déplacement des Resto Rallyens vers les différents restaurants
+        p 20.45-21.30 entrée chaude
+        p 21.30-21.45	déplacementx des Resto Rallyens vers les différents restaurants
+        p 21.45-22.30 plat principal
+        p 22.30-…	retour au lieu d’accueil pour café, pousse et dessert
+        h3 Le tarif par participant s'élève à 60 €, ce prix comprend:
+        ul
+            li L'apéro et ses zakouskis
+            li L'entrée froide
+            li L'entrée chaude
+            li Le plat principal
+            li Le café et son dessert
+            li Le pousse-café
+            li + un verre de vin et d'eau dans chaque restaurant
         
     div#slide2.slideImage
     div.slideText.slideRestaurant
