Fix name font-face

--- a/mockUp/src/sass/_fontFace.sass
+++ b/mockUp/src/sass/_fontFace.sass
@@ -1,5 +1,5 @@
 @font-face
-    font-family: "MyDancingScript"
+    font-family: "MyRochter"
     src: url( "images/fonts/rochter/Rochester-Regular.otf" )
 
 @font-face
@@ -8,7 +8,7 @@
 
 @font-face
     font-family: "MyRobotoNav"
-    src: url( "images/fonts/roboto/Roboto-Medium.ttf" )
+    src: url( "images/fonts/roboto/Roboto-Regular.ttf" )
 
 @font-face
     font-family: "MyRobotoHeading"
