--- a/mockUp/src/sass/_rules.sass
+++ b/mockUp/src/sass/_rules.sass
@@ -5,4 +5,4 @@
 $regularFont: 16px/1.5 "MyRobotoLabeur", sans-serif
 $NavFont: "MyRobotoNav", sans-serif
 $headingFont: "MyRobotoHeading", sans-serif
-$quoteFont: "MyDancingScript", cursive
+$quoteFont: "MyRochter", cursive
