--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -26,25 +26,28 @@ block content
     div#slide1.slideImage
         blockquote 
             | Ne manquez pas notre prochain 
-            a(href="#") Rendez-vous 
+            a(href="html/evenements.html") Rendez-vous 
             | dans la région de Namur
     div.slideText.addText
         h3 Bienvenue au Resto-Rally
-        p Le Resto Rallye, un itinéraire gourmand en trois restaurants
-        p Pourquoi toujours se limiter à un seul restaurant pour déguster l’entièreté d’un menu ?
+        p Le Resto Rallye est un itinéraire gourmand en trois restaurants, pourquoi toujours se limiter à un seul restaurant pour déguster l’entièreté d’un menu ?
         p Le Resto Rallye offre la possibilité à ses « gastronomades » de faire connaissance, en une seule soirée, de plusieurs établissements d’une ville ainsi que de découvrir une nouvelle région de façon originale et ludique.
         p A l’instar d’un rallye automobile, les convives se réunissent dans un espace commun afin d’y déguster l’apéro et les mises en bouche. Chacun y reçoit le roadbook ; on trouve dans celui-ci un plan de la ville avec l’emplacement des restaurants, les bons donnant droit aux mets ainsi que l’itinéraire des restaurants proposés.
         p Ensuite, départ vers l’inconnu… Il faut expérimenter les papilles ! C’est la seule constante des étapes… La première halte est consacrée à la dégustation de l‘entrée froide, la deuxième à l’entrée chaude et la dernière au plat principal. Tous les Resto Rallyens se retrouvent ensuite pour savourer le dessert et le café dans le même endroit où ils ont pris l‘apéro et dans lequel ils peuvent échanger leurs avis sur leurs parcours respectifs.
+    div#slide2.slideImage    
+    div.slideText.addText
         h3 Programme type de la soirée
-        p 18.30- 19.30 réception des Resto Rallyens au lieu d’accueil
-        p 19.30-19.45 déplacement des Resto Rallyens vers les différents restaurants
-        p 19.45-20.30 entrée froide
-        p 20.30-20.45 déplacement des Resto Rallyens vers les différents restaurants
-        p 20.45-21.30 entrée chaude
-        p 21.30-21.45	déplacementx des Resto Rallyens vers les différents restaurants
-        p 21.45-22.30 plat principal
-        p 22.30-…	retour au lieu d’accueil pour café, pousse et dessert
-        h3 Le tarif par participant s'élève à 60 €, ce prix comprend:
+        p 18.30 - 19.30 réception des Resto Rallyens au lieu d’accueil
+        p 19.30 - 19.45 déplacement des Resto Rallyens vers les différents restaurants
+        p 19.45 - 20.30 entrée froide
+        p 20.30 - 20.45 déplacement des Resto Rallyens vers les différents restaurants
+        p 20.45 - 21.30 entrée chaude
+        p 21.30 - 21.45	déplacementx des Resto Rallyens vers les différents restaurants
+        p 21.45 - 22.30 plat principal
+        p 22.30 - …	retour au lieu d’accueil pour café, pousse et dessert
+    div#slide3.slideImage 
+    div.slideText.addText
+        h3 Le tarif par participant s'élève à 60 €, ce prix comprend
         ul
             li L'apéro et ses zakouskis
             li L'entrée froide
@@ -54,7 +57,7 @@ block content
             li Le pousse-café
             li + un verre de vin et d'eau dans chaque restaurant
         
-    div#slide2.slideImage
+    div#slide4.slideImage
     div.slideText.slideRestaurant
         h3 Nous vous conseillons ces adresses
         div.restaurants
@@ -75,7 +78,7 @@ block content
                     | Chez Jean,  
                     span Bruxelles
                 img(src="css/images/exempleRest.jpg", alt="")
-    div#slide3.slideImage
+    div#slide5.slideImage
         
 block footer
     div.slideText.myFooter
