add font-face : Roboto Bold

--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -37,14 +37,24 @@ block content
     div#slide2.slideImage    
     div.slideText.addText
         h3 Programme type de la soirée
-        p 18.30 - 19.30 réception des Resto Rallyens au lieu d’accueil
-        p 19.30 - 19.45 déplacement des Resto Rallyens vers les différents restaurants
-        p 19.45 - 20.30 entrée froide
-        p 20.30 - 20.45 déplacement des Resto Rallyens vers les différents restaurants
-        p 20.45 - 21.30 entrée chaude
-        p 21.30 - 21.45	déplacementx des Resto Rallyens vers les différents restaurants
-        p 21.45 - 22.30 plat principal
-        p 22.30 - …	retour au lieu d’accueil pour café, pousse et dessert
+        dl
+            dt 18.30 - 19.30
+            dd Réception des Resto Rallyens au lieu d’accueil
+            dt 19.30 - 19.45
+            dd Déplacement des Resto Rallyens vers les différents restaurants
+            dt 19.45 - 20.30
+            dd Entrée froide
+            dt 20.30 - 20.45
+            dd Déplacement des Resto Rallyens vers les différents restaurants
+            dt 20.45 - 21.30
+            dd Entrée chaude
+            dt 21.30 - 21.45
+            dd Déplacementx des Resto Rallyens vers les différents restaurants
+            dt 21.45 - 22.30
+            dd Plat principal
+            dt 22.30 - …
+            dd Retour au lieu d’accueil pour café, pousse et dessert
+
     div#slide3.slideImage 
     div.slideText.addText
         h3 Le tarif par participant s'élève à 60 €, ce prix comprend
@@ -58,7 +68,7 @@ block content
             li + un verre de vin et d'eau dans chaque restaurant
         
     div#slide4.slideImage
-    div.slideText.slideRestaurant
+    div.slideText
         h3 Nous vous conseillons ces adresses
         div.restaurants
             a(href="#")
@@ -71,7 +81,7 @@ block content
                 h4 
                     | Chez Norbert, 
                     span Namur
-                img(src="css/images/exempleRest.jpg", alt="")
+                img(src="css/images/exempleRest1.jpg", alt="")
         div.restaurants
             a(href="#")
                 h4 
