--- a/mockUp/src/sass/_fontFace.sass
+++ b/mockUp/src/sass/_fontFace.sass
@@ -7,6 +7,10 @@
     src: url( "images/fonts/roboto/Roboto-Light.ttf" )
 
 @font-face
+    font-family: "MyRobotoBold"
+    src: url( "images/fonts/roboto/Roboto-Bold.ttf" )
+
+@font-face
     font-family: "MyRobotoNav"
     src: url( "images/fonts/roboto/Roboto-Regular.ttf" )
 
