--- a/mockUp/src/sass/_rules.sass
+++ b/mockUp/src/sass/_rules.sass
@@ -3,6 +3,7 @@
 
 //My font
 $regularFont: 16px/1.5 "MyRobotoLabeur", sans-serif
-$NavFont: "MyRobotoNav", sans-serif
+$boldFont: "MyRobotoBold", sans-serif
+$navFont: "MyRobotoNav", sans-serif
 $headingFont: "MyRobotoHeading", sans-serif
 $quoteFont: "MyRochter", cursive
