--- a/mockUp/src/sass/_mixins.sass
+++ b/mockUp/src/sass/_mixins.sass
@@ -18,7 +18,7 @@
 	-ms-filter: 	grayscale( $level )
 	-o-filter: 		grayscale( $level )
 =menuFontStyle( $size )
-	font-family: $NavFont
+	font-family: $navFont
 	font-size: $size
 	text-transform: uppercase
 =headingStyle( $size )
