--- a/mockUp/src/sass/screen.sass
+++ b/mockUp/src/sass/screen.sass
@@ -164,9 +164,8 @@ blockquote
         padding: 0.25em 0
         &firsr-child
             padding: 0
-.slideRestaurant
-    &:after
-        +clearFloat()
+dt
+    font-family: $boldFont
 .restaurants
     display: inline-block
     width: 30%
@@ -181,6 +180,8 @@ blockquote
         text-decoration: none
     img
         width: 100%
+        max-width: 310px
+        max-height: 205px
     p
         text-align: center
         padding: 0.5em 0
@@ -209,7 +210,7 @@ h4
         padding-bottom: 0.3em
         font-size: 0.85em
         font-style: normal
-        font-weight: bold
+        font-family: $boldFont
 .follow
     li
         display: inline-block
