style index.html
mockUP Index done

--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -58,7 +58,7 @@ block content
     div#slide3.slideImage 
     div.slideText.addText
         h3 Le tarif par participant s'élève à 60 €, ce prix comprend
-        ul
+        ul.tarif
             li L'apéro et ses zakouskis
             li L'entrée froide
             li L'entrée chaude
