--- a/mockUp/src/sass/screen.sass
+++ b/mockUp/src/sass/screen.sass
@@ -164,8 +164,20 @@ blockquote
         padding: 0.25em 0
         &firsr-child
             padding: 0
+
 dt
     font-family: $boldFont
+    padding-top: 0.5em
+    &first-child
+        padding: 0
+dd
+    padding: 0.25em 0
+
+.tarif li
+    padding: 0.25em 0
+    margin-left: 1.25em
+    list-style-type: circle
+
 .restaurants
     display: inline-block
     width: 30%
