fix some details on index.html

--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -35,7 +35,7 @@ block content
         p A l’instar d’un rallye automobile, les convives se réunissent dans un espace commun afin d’y déguster l’apéro et les mises en bouche. Chacun y reçoit le roadbook ; on trouve dans celui-ci un plan de la ville avec l’emplacement des restaurants, les bons donnant droit aux mets ainsi que l’itinéraire des restaurants proposés.
         p Ensuite, départ vers l’inconnu… Il faut expérimenter les papilles ! C’est la seule constante des étapes… La première halte est consacrée à la dégustation de l‘entrée froide, la deuxième à l’entrée chaude et la dernière au plat principal. Tous les Resto Rallyens se retrouvent ensuite pour savourer le dessert et le café dans le même endroit où ils ont pris l‘apéro et dans lequel ils peuvent échanger leurs avis sur leurs parcours respectifs.
     div#slide2.slideImage    
-    div.slideText.addText
+    div.slideText.addDL
         h3 Programme type de la soirée
         dl
             dt 18.30 - 19.30
@@ -46,6 +46,7 @@ block content
             dd Entrée froide
             dt 20.30 - 20.45
             dd Déplacement des Resto Rallyens vers les différents restaurants
+        dl
             dt 20.45 - 21.30
             dd Entrée chaude
             dt 21.30 - 21.45
