--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -88,7 +88,7 @@ block content
                 h4 
                     | Chez Jean,  
                     span Bruxelles
-                img(src="css/images/exempleRest.jpg", alt="")
+                img(src="css/images/exempleRest2.jpg", alt="")
     div#slide5.slideImage
         
 block footer
