fix bug problem for font

--- a/mockUp/src/sass/screen.sass
+++ b/mockUp/src/sass/screen.sass
@@ -9,6 +9,7 @@ html
     font: $regularFont
     height: 100%
     overflow: hidden
+    -webkit-font-smoothing: antialiased
 body
     transform-style: preserve-3d
     height: 100%
