--- a/_mockUp/src/jade/includes/header.jade
+++ b/_mockUp/src/jade/includes/header.jade
@@ -1,8 +1,9 @@
 // - includes/header.jade
 
 header
-    h2 Menu de navigation du site Resto Rallye
+    h1.hiddenTitle Bienvenue sur le site de Resto Rallye 
     nav
+        h2.hiddenTitle Menu de navigation du site
         ul
             li
                 a(href="evenements.html") Événements
