--- a/_mockUp/src/styl/ITCSS/base/_base.heading.styl
+++ b/_mockUp/src/styl/ITCSS/base/_base.heading.styl
@@ -21,18 +21,36 @@ wf_heading-size-6 = 13.090px
 //
 h1, .alpha
     rem-fallback( font-size, wf_heading-size-1 )
+    rem-fallback( padding, 24px 0 12px 0 )
+    &:first-child
+        padding-top 0
 
 h2, .beta
     rem-fallback( font-size, wf_heading-size-2 )
+    rem-fallback( padding, 24px 0 12px 0 )
+    &:first-child
+        padding-top 0
 
 h3, .gamma
     rem-fallback( font-size, wf_heading-size-3 )
+    rem-fallback( padding, 24px 0 12px 0 )
+    &:first-child
+        padding-top 0
 
 h4, .delta
     rem-fallback( font-size, wf_heading-size-4 )
+    rem-fallback( padding, 24px 0 12px 0 )
+    &:first-child
+        padding-top 0
 
 h5, .epsilon
     rem-fallback( font-size, wf_heading-size-5 )
+    rem-fallback( padding, 24px 0 12px 0 )
+    &:first-child
+        padding-top 0
 
 h6, .zeta
     rem-fallback( font-size, wf_heading-size-6 )
+    rem-fallback( padding, 24px 0 12px 0 )
+    &:first-child
+        padding-top 0
