--- a/_mockUp/src/styl/ITCSS/base/_base.link.styl
+++ b/_mockUp/src/styl/ITCSS/base/_base.link.styl
@@ -11,6 +11,13 @@
 
 
 // Remove default style for link
+a
+    color wf_link-color
+    transition( all, 0.25s )
+    &:hover
+        color wf_link-color-hover
+        text-decoration none
+
 .removeLink
     color inherit
     text-decoration none
