--- a/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
+++ b/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
@@ -12,26 +12,32 @@
 
 // Font settings.
 wf_font-size                    =    16px
-wf_line-height                  =    24px
+wf_line-height                  =    20px
 wf_space-unit                   =    wf_font-size
-wf_font-labeur                  =    "Helvetica Neue", "Helvetica", "Arial", sans-serif
-wf_font-heading                 =    "Gill Sans", sans-serif
+wf_font-labeur                  =    "RobotoLabeur", sans-serif
+wf_font-bold                    =    "RobotoBold", sans-serif
+wf_font-nav                     =    "RobotoNav", sans-serif
+wf_font-heading                 =    "RobotoHeading", sans-serif
+wf_font-quote                   =    "RochterQuote", sans-serif
 
 // Text colors.
-wf_labeur-color                 =    #333333
-wf_heading-color                =    #888888
-wf_nav-color                    =    #45a0c9
-wf_nav-color-hover              =    #59d0ff
-wf_link-color                   =    #139885
-wf_link-color-hover             =    #1be6bd
+wf_labeur-color                 =    #7f8c8d
+wf_heading-color                =    #677171
+wf_nav-color                    =    #ffffff
+wf_link-color                   =    #3498db
+wf_link-color-hover             =    #90b4c5
+wf_quote-color                  =    #eaeaea
+wf_error-color                  =    #c0392b
 
 // Background colors.
 wf_background-color             =    #ffffff
+wf_background-header            =    #3498db
+wf_background-footer            =    #ffffff
 
 // Border colors
-wf_border-color                 =    #ffffff
+wf_border-menu                  =    #fbfbfb
+wf_border-error                 =    #c0392b
 
 // Forms settings
-wf_form-border-color            =    #ffffff
-wf_form-background-color        =    #ffffff
-wf_form-background-color-focus  =    #ffffff
+wf_form-background-color        =    #eeeeee
+wf_form-background-color-focus  =    #f5f5f5
