--- a/_mockUp/src/styl/main.styl
+++ b/_mockUp/src/styl/main.styl
@@ -2,6 +2,7 @@
 @import "kouto-swiss"
 
 // - Setting
+@import "ITCSS/settings/_settings.font-face.styl"
 @import "ITCSS/settings/_settings.default.styl"
 
 // - Tools
@@ -10,7 +11,6 @@
 
 // - Generic
 @import "ITCSS/generic/_generic.reset.styl"
-@import "ITCSS/generic/_generic.normalize.styl"
 @import "ITCSS/generic/_generic.align.styl"
 @import "ITCSS/generic/_generic.box-sizing.styl"
 
